--- a/lab06/lab06/tienda/templates/layout.html
+++ b/lab06/lab06/tienda/templates/layout.html
@@ -45,7 +45,7 @@
       <div class="row">
 
         <div class="col-lg-3">
-          <h1 class="my-4">Tienda De Mark</h1>
+          <h1 class="my-4">Supermercado CA</h1>
           <div class="list-group">
             <a href="#" class="list-group-item">Gaseosas</a>
             <a href="#" class="list-group-item">Snacks</a>
